--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             </div>
             <div class="icons_space">
                 <img src="images/intagram.svg" alt="Logo Instagram">
-                <img src="images/youtube.svg" alt="Logo Youtube">
-                <img src="images/spotify.svg" alt="Logo Spotify">
+                <img src="images/youtube.svg" alt="Logo Youtube" class="margin_mobile_icons">
+                <img src="images/spotify.svg" alt="Logo Spotify" class="margin_mobile_icons">
             </div>
         </section>
     </header>
