--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="shortcut icon" type="image/jpg" href="images/favicon.svg">
-</head>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
@@ -21,9 +20,15 @@
                 <img src="images/nyxell.svg" alt="Logo Nyxell" class="responsive_size_logo">
             </div>
             <div class="icons_space">
-                <img src="images/intagram.svg" alt="Logo Instagram">
-                <img src="images/youtube.svg" alt="Logo Youtube" class="margin_mobile_icons">
-                <img src="images/spotify.svg" alt="Logo Spotify" class="margin_mobile_icons">
+                <a href="https://www.instagram.com/nyxellapp/" target="_blank">
+                    <img src="images/intagram.svg" alt="Logo Instagram">
+                </a>
+                <a href="https://www.youtube.com/channel/UCr3GI5BSU9lNzBu6W2JlPGw" target="_blank">
+                    <img src="images/youtube.svg" alt="Logo Youtube" class="margin_mobile_icons">
+                </a>
+                <a href="https://open.spotify.com/user/v1x3g6lpvvztduanjurub8wrb?si=280beb19ca5843cc" target="_blank">
+                    <img src="images/spotify.svg" alt="Logo Spotify" class="margin_mobile_icons">
+                </a>
             </div>
         </section>
     </header>
@@ -42,10 +47,12 @@
                         <p> Con Nyxell puedes comprar las entradas para tus discotecas favoritas,
                             seleccionas el evento, eliges tu entrada, y en un click tienes tu QR
                             listo para enseñar en la puerta, easy. ✨ </p>
-                        <button>
-                            <div>Ver discotecas</div>
-                            <div><img src="images/arrow_right.svg" alt="Flecha hacia la derecha"></div>
-                        </button>
+                        <a href="https://nyxell.com/descargar" target="_blank">
+                            <button>
+                                <div>Ver discotecas</div>
+                                <div><img src="images/arrow_right.svg" alt="Flecha hacia la derecha"></div>
+                            </button>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -55,10 +62,10 @@
         </section>
         <section class="principal_section general_margin">
             <div data-aos="fade-up" data-aos-anchor-placement="center-bottom" class="responsive_flip">
-                <img src="images/iphone_entradas.png" alt="Móvil con entrada digital con código QR" class="iphone_salas break_order">
+                <img src="images/iphone_entradas.png" alt="Móvil con entrada digital con código QR"
+                    class="iphone_salas break_order">
             </div>
-            <div class="principal_text_box" data-aos="fade-up"
-            data-aos-anchor-placement="center-bottom">
+            <div class="principal_text_box" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
                 <div>
                     <h1 class="gradient"> ¡No te líes! </h1>
                 </div>
@@ -71,50 +78,53 @@
                         <p> Sabemos que lo más importante es que lo pases genial con los tuyos y
                             por eso queremos que te olvides de los trámites. Consigue tus entradas
                             en un momento y desde donde quieras. ¡No te líes! </p>
-                        <button>
-                            <div>Ver discotecas</div>
-                            <div><img src="images/arrow_right.svg" alt="Flecha hacia la derecha"></div>
-                        </button>
+                        <a href="https://nyxell.com/descargar" target="_blank">
+                            <button>
+                                <div>Ver discotecas</div>
+                                <div><img src="images/arrow_right.svg" alt="Flecha hacia la derecha"></div>
+                            </button>
+                        </a>
                     </div>
                 </div>
             </div>
         </section>
         <section class="gradient_bg white" data-aos="fade-up" data-aos-anchor-placement="top-center">
             <section class="general_margin padding_section" data-aos="fade-up" data-aos-anchor-placement="top-center">
-            <div>
-                <h2 class="center_text"> ¿Quieres trabajar con nosotros? </h2>
-            </div>
-            <div class="principal_section">
-                <div class="principal_section margin80 relative-section" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                    <div class="absolute-circle"></div>
-                    <div class="absolut_arrow"><img src="images/arrow_right.svg" alt="Flecha Derecha"></div>
-                    <div class="absolut_arrow"><img src="images/arrow_right.svg" alt="Flecha Derecha"></div>
-                    <div>
-                        <h3>Empresas</h3>
-                        <p class="mini_box">Integra Nyxell en tu local</p>
-                    </div>
-                    <div id="margin_wallet">
-                        <img src="images/money.png" alt="Cartera con monedas" class="img2size">
-                        <!--<img src="images/circle.svg" alt="Círculo">
-                        <img src="images/arrow_right.svg" alt="Flecha a la derecha">-->
-                    </div>
+                <div>
+                    <h2 class="center_text"> ¿Quieres trabajar con nosotros? </h2>
                 </div>
-                <div class="principal_section margin80 relative-section" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                    <div class="absolute-circle"></div>
-                    <div class="absolut_arrow"><img src="images/arrow_right.svg" alt="Flecha Derecha"></div>
-                    <div class="absolut_arrow"><img src="images/arrow_right.svg" alt="Flecha Derecha"></div>
-                    <div>
-                        <h3>Particulares</h3>
-                        <p class="mini_box">Forma parte del Nyxell Team</p>
+                <a href="mailto:contacto@nyxell.com">
+                    <div class="principal_section">
+                        <div class="principal_section margin80 relative-section white" data-aos="fade-up"
+                            data-aos-anchor-placement="top-bottom">
+                            <div class="absolute-circle"></div>
+                            <div class="absolut_arrow1"><img src="images/arrow_right_blue.svg" alt="Flecha Derecha"></div>
+                            <div class="absolut_arrow2"><img src="images/arrow_right.svg" alt="Flecha Derecha"></div>
+                            <div>
+                                <h3>Empresas</h3>
+                                <p class="mini_box">Integra Nyxell en tu local</p>
+                            </div>
+                            <div id="margin_wallet">
+                                <img src="images/money.png" alt="Cartera con monedas" class="img2size">
+                            </div>
+                        </div>
+                </a>
+                <a href="mailto:contacto@nyxell.com">
+                    <div class="principal_section margin80 relative-section white" data-aos="fade-up"
+                        data-aos-anchor-placement="top-bottom">
+                        <div class="absolute-circle"></div>
+                        <div class="absolut_arrow3"><img src="images/arrow_right_blue.svg" alt="Flecha Derecha"></div>
+                        <div class="absolut_arrow4"><img src="images/arrow_right.svg" alt="Flecha Derecha"></div>
+                        <div>
+                            <h3>Particulares</h3>
+                            <p class="mini_box">Forma parte del Nyxell Team</p>
+                        </div>
+                        <div>
+                            <img src="images/lemon.png" alt="Dibujo animado con forma de limón" class="img1size">
+                        </div>
                     </div>
-                    <div>
-                        <img src="images/lemon.png" alt="Dibujo animado con forma de limón" class="img1size" >
-                        <!--<img src="images/circle.svg" alt="Círculo">
-                        <img src="images/arrow_right.svg" alt="Flecha a la derecha">-->
-                    </div>
-                </div>
-            </div>
-        </section>
+                </a>
+            </section>
         </section>
     </main>
     <!-- <footer>
