--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div>
                     <h2 class="center_text"> ¿Quieres trabajar con nosotros? </h2>
                 </div>
-                <a href="mailto:contacto@nyxell.com">
+                <a href="mailto:contacto@nyxell.com?subject=Quiero%20integrar%20Nyxell%20en%20mi%20local&body=Escribe%20aquí%20dónde%20quieres%20integrar%20Nyxell">
                     <div class="principal_section">
                         <div class="principal_section margin80 relative-section white" data-aos="fade-up"
                             data-aos-anchor-placement="top-bottom">
@@ -109,7 +109,7 @@
                             </div>
                         </div>
                 </a>
-                <a href="mailto:contacto@nyxell.com">
+                <a href="mailto:contacto@nyxell.com?subject=Quiero%20trabajar%20en%20Nyxell&body=Escribe%20aquí%20lo%20que%20crees%20que%20puedes%20aportar%20al%20Nyxell%20Team">
                     <div class="principal_section margin80 relative-section white" data-aos="fade-up"
                         data-aos-anchor-placement="top-bottom">
                         <div class="absolute-circle"></div>
