--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <header>
         <section class="general_margin">
             <div>
-                <img src="images/nyxell.svg" alt="Logo Nyxell" class="responsive_size_logo">
+                <a href="https://nyxell.com/">
+                    <img src="images/nyxell.svg" alt="Logo Nyxell" class="responsive_size_logo">
+                </a>
             </div>
             <div class="icons_space">
                 <a href="https://www.instagram.com/nyxellapp/" target="_blank">
