--- a/index.html
+++ b/index.html
@@ -147,6 +147,30 @@
     <script>
         AOS.init();
     </script>
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.0/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.6.0/firebase-analytics.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+      
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+          apiKey: "AIzaSyA_-5A52q6QIYBldaw-sZQ-1mbaJk-KM94",
+          authDomain: "nyxell-23b12.firebaseapp.com",
+          databaseURL: "https://nyxell-23b12.firebaseio.com",
+          projectId: "nyxell-23b12",
+          storageBucket: "nyxell-23b12.appspot.com",
+          messagingSenderId: "835621418724",
+          appId: "1:835621418724:web:3a91da4c2928d985ea1ef1",
+          measurementId: "G-ZCXTM3GWWH"
+        };
+      
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
+      </script>
 </body>
 
 </html>
